[package]
name = "tmi-rs"
description = "Websocket based asynchronous connector to Twitch chat"
categories = ["asynchronous", "twitch", "websocket", "irc"]
keywords = ["twitch", "chat", "irc", "websockets", "async", "futures"]
repository = "https://github.com/cere42/tmi-rs"
version = "0.1.0"
authors = ["cerebellum42 <cere@fastmail.fm>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
thiserror = "1.0.9"
log = "0.4.8"
fnv = "1.0.6"
derive_builder = "0.9.0"
derive_more = "0.99.1"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
pin-utils = "0.1.0-alpha.4"
tokio-tungstenite = "0.10.1"
tokio-tls = "0.3.0"
url = "2.1.0"
nom = "5.0.1"
smallvec = "1.0.0"
parking_lot = "0.9.0"
vec_map = "0.8.1"

[dependencies.tokio]
version = "0.2.13"
features = ["sync", "rt-core", "net", "time", "signal", "stream"]

[lib]
name = "tmi_rs"

[dev-dependencies]
env_logger = "0.7.1"
futures = "0.3"
tokio-test = "0.2.0"
futures-test = "0.3.1"
async-stream = "0.2.0"

[dev-dependencies.tokio]
version = "0.2.13"
features = ["sync", "rt-core", "net", "time", "test-util", "macros", "signal"]